--- a/flex.html
+++ b/flex.html
@@ -9,16 +9,16 @@
         <div class="header-container">
 
             <ul class="header-list">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a class="home-pic" href="index.html">Home</a></li>
+                <li><a class="gallery-pic" href="#">Gallery</a></li>
                 <li>
-                    <a href="#">Homeworks</a>
+                    <a class="arrow-down-pic" href="#">Homeworks</a>
                     <ul class="header-second-list">
                         <li><a href="table.html">Table</a></li>
                         <li><a href="inline-block.html">Inline-block</a></li>
                         <li><a href="float.html">Float</a></li>
                         <li class="dropdown">
-                            <a href="#">Flex</a>
+                            <a class="arrow-left-pic" href="#">Flex</a>
                             <ul class="third-list">
                                 <li><a href="#">Flex-block</a></li>
                             </ul>
@@ -74,5 +74,25 @@
     </div>
 </div>
 </main>
+
+<footer class="footer">
+    <div class="container">
+        <ul class="footer-socials">
+            <li class="footer-list-item">
+                <a class="insta" href="https://www.instagram.com" target="_blank"></a>
+            </li>
+            <li class="footer-list-item">
+                <a class="facebook" href="https://www.facebook.com" target="_blank"></a>
+            </li>
+            <li class="footer-list-item">
+                <a class="yt" href="https://www.youtube.com" target="_blank"></a>
+            </li>
+            <li class="footer-list-item">
+                <a class="reddit" href="https://www.reddit.com/r/ww25/?subid1=20240304-0457-22c4-b221-e74ad947a412" target="_blank"></a>
+            </li>
+        </ul>
+    </div>
+</footer>
+
 </body>
 </html>
