--- a/table.html
+++ b/table.html
@@ -9,16 +9,16 @@
         <div class="header-container">
 
             <ul class="header-list">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a class="home-pic" href="index.html">Home</a></li>
+                <li><a class="gallery-pic" href="#">Gallery</a></li>
                 <li>
-                    <a href="#">Homeworks</a>
+                    <a class="arrow-down-pic" href="#">Homeworks</a>
                     <ul class="header-second-list">
                         <li><a href="#">Table</a></li>
                         <li><a href="inline-block.html">Inline-block</a></li>
                         <li><a href="float.html">Float</a></li>
                         <li class="dropdown">
-                            <a href="#">Flex</a>
+                            <a class="arrow-left-pic" href="#">Flex</a>
                             <ul class="third-list">
                                 <li><a href="flex.html">Flex-block</a></li>
                             </ul>
