--- a/flex.html
+++ b/flex.html
@@ -77,6 +77,7 @@
 
 <footer class="footer">
     <div class="container">
+        <div class="footer-wrapper">
         <ul class="footer-socials">
             <li class="footer-list-item">
                 <a class="insta" href="https://www.instagram.com" target="_blank"></a>
@@ -91,6 +92,7 @@
                 <a class="reddit" href="https://www.reddit.com/r/ww25/?subid1=20240304-0457-22c4-b221-e74ad947a412" target="_blank"></a>
             </li>
         </ul>
+        </div>
     </div>
 </footer>
 
