Bugs fixed, footer updated

--- a/flex.html
+++ b/flex.html
@@ -5,6 +5,7 @@
     <title>Flex page</title>
 </head>
 <body class="flex-body-bg">
+    <div class="main-wrapper">
     <header class="header">
         <div class="header-container">
 
@@ -96,5 +97,6 @@
     </div>
 </footer>
 
+</div>
 </body>
 </html>
