--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Home</title>
 </head>
-<body>
+<body> 
+    <div class="main-wrapper">
+
     <header class="header">
         <div class="header-container">
 
@@ -27,7 +29,32 @@
                 </li>
             </ul>
         </div>
-
+       
     </header>
+
+    <main></main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-wrapper">
+            <ul class="footer-socials">
+                <li class="footer-list-item">
+                    <a class="insta" href="https://www.instagram.com" target="_blank"></a>
+                </li>
+                <li class="footer-list-item">
+                    <a class="facebook" href="https://www.facebook.com" target="_blank"></a>
+                </li>
+                <li class="footer-list-item">
+                    <a class="yt" href="https://www.youtube.com" target="_blank"></a>
+                </li>
+                <li class="footer-list-item">
+                    <a class="reddit" href="https://www.reddit.com/r/ww25/?subid1=20240304-0457-22c4-b221-e74ad947a412" target="_blank"></a>
+                </li>
+            </ul>
+            </div>
+        </div>
+    </footer>
+    
+</div>
 </body>
 </html>
