--- a/inline-block.html
+++ b/inline-block.html
@@ -5,6 +5,7 @@
     <title>Inline-block page</title>
 </head>
 <body class="inline-block-bg">
+    <div class="main-wrapper">
     <header class="header">
         <div class="header-container">
 
@@ -28,6 +29,7 @@
             </ul>
         </div>
     </header>
+
     <main>
         <div class="container">
             <div class="wrapper">
@@ -74,5 +76,27 @@
         </div>
     </div>
     </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-wrapper">
+            <ul class="footer-socials">
+                <li class="footer-list-item">
+                    <a class="insta" href="https://www.instagram.com" target="_blank"></a>
+                </li>
+                <li class="footer-list-item">
+                    <a class="facebook" href="https://www.facebook.com" target="_blank"></a>
+                </li>
+                <li class="footer-list-item">
+                    <a class="yt" href="https://www.youtube.com" target="_blank"></a>
+                </li>
+                <li class="footer-list-item">
+                    <a class="reddit" href="https://www.reddit.com/r/ww25/?subid1=20240304-0457-22c4-b221-e74ad947a412" target="_blank"></a>
+                </li>
+            </ul>
+            </div>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
